Ajout d'un champ Category dans les fichiers description
git-svn-id: svn://scm.gforge.inria.fr/svnroot/coq-contribs/trunk@776 0cf17b13-060f-0410-b1b1-c666bec9822a

--- a/description
+++ b/description
@@ -19,3 +19,4 @@ Keywords:
   weak bisimilarity, weak bisimulation, up-to techniques, 
   termination, commutation, Newman's Lemma.
 Require:
+Category: Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems
