--- a/description
+++ b/description
@@ -13,7 +13,7 @@ Description:
   new up-to techniques, based on termination guarantees. Notably, a
   generalisation of Newman's Lemma to commutation results is
   established.
-URL: http://perso.ens-lyon.fr/damien.pous/upto/
+Url: http://perso.ens-lyon.fr/damien.pous/upto/
 License: GPL
 Keywords: 
   weak bisimilarity, weak bisimulation, up-to techniques, 
