--- a/description
+++ b/description
@@ -4,7 +4,7 @@ Author: Damien Pous
 Email: damien.pous at ens-lyon.fr
 Homepage: http://perso.ens-lyon.fr/damien.pous/
 Institution: ENS Lyon, France
-Date: 2005/02/22
+Date: 2005-02-22
 Description: 
   This contribution is the formalisation of a paper that appeared in
   Proc. of ICALP 2005: "Up-to Techniques for Weak Bisimulation".
